--- a/src/templates/components/footer.pug
+++ b/src/templates/components/footer.pug
@@ -4,6 +4,6 @@ footer.footer
             img(src="").footer-logo-img
         .footer-items
             a(href="").footer-items-item Home
-            a(href="").footer-items-item Home
-            a(href="").footer-items-item Home
-            a(href="").footer-items-item Home
+            a(href="").footer-items-item O službě
+            a(href="").footer-items-item Registrace
+            a(href="").footer-items-item Support
