--- a/src/templates/layouts/default.pug
+++ b/src/templates/layouts/default.pug
@@ -39,7 +39,7 @@ html(lang=manifest.lang)
 		script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js', defer)
 		script(src=`scripts/${buildstamp}index.js`, defer)
 
-	body
+	body.layout
 
 		include ../components/menu
 
