--- a/src/styles/comps/layout.sass
+++ b/src/styles/comps/layout.sass
@@ -1,8 +1,4 @@
 .layout
-	display: block
-	max-width: 45em
-	margin: $spacing auto
-
-
-	+media($landscape)
-		padding: 0 60px
+	min-height: 100vh
+	+relative()
+	overflow: hidden
