--- a/src/styles/parts/footer.sass
+++ b/src/styles/parts/footer.sass
@@ -1,17 +1,21 @@
 .footer
+  +absolute(null null 0 null)
   +size(100% auto)
-  max-width: 1100px
   background-color: rgb(72, 72, 72)
   padding: 35px 0
 
   &-in
     +flex(space-between, center)
-    +size(100% auto)
-    max-width: 1100px
+    +size(95% auto)
+    margin: 0 auto
 
   &-items
     +flex()
 
     &-item
       color: #fff
-      margin: 0 15px
+      margin-left: 30px
+      transition: 200ms 
+
+      &:hover
+        opacity: 0.7
