--- a/src/templates/components/menu.pug
+++ b/src/templates/components/menu.pug
@@ -8,7 +8,7 @@ div.menu
 			img
 
 	div.menu-links
-		a(href="#").menu-links-item
+		a(href="/profile.html").menu-links-item
 			i(aria-hidden="true").fa.fa-user-circle.menu-links-item-i
 		a(href="#").menu-links-item
 			i(aria-hidden="true").fa.fa-share-alt.menu-links-item-i
