--- a/src/templates/profile.pug
+++ b/src/templates/profile.pug
@@ -31,7 +31,7 @@ block otherContent
                 p.profile-option-info-text Přehled a nastavení holiday videí
         i(aria-hidden="true").fa.fa-arrow-circle-right.profile-option-next
 
-    a(href="#").profile-option
+    a(href="/friends.html").profile-option
         .profile-option-wrap
             .profile-option-img.view-friends
                 i(aria-hidden="true").fa.fa-users
