--- a/src/styles/parts/footer.sass
+++ b/src/styles/parts/footer.sass
@@ -1,8 +1,9 @@
 .footer
-  +absolute(null null 0 null)
+  +relative(null null 0 null)
   +size(100% auto)
   background-color: rgb(72, 72, 72)
   padding: 35px 0
+  margin-top: 100px
 
   &-in
     +flex(space-between, center)
@@ -15,7 +16,7 @@
     &-item
       color: #fff
       margin-left: 30px
-      transition: 200ms 
+      transition: 200ms
 
       &:hover
         opacity: 0.7
