--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -8,8 +8,9 @@ block content
 		a(href='/login-first.html').btn.view-envelope= 'Přihlásit se'
 
 	div.section
-		div.section-heading
-				h1.section-heading-title= "Nejnovější veřejná videa"
+		div.section-in
+			div.section-heading
+					h1.section-heading-title= "Nejnovější veřejná videa"
 
 
 
