--- a/src/templates/login-first.pug
+++ b/src/templates/login-first.pug
@@ -5,7 +5,8 @@ append vars
 	- var sectionTitle = "Login"
 
 block sectionPicture
-	i(aria-hidden="true").fa.fa-user-circle.menu-links-item-i.section-heading-picture-font
+	.section-heading-picture.view-grey
+		i(aria-hidden="true").fa.fa-user-circle.menu-links-item-i.section-heading-picture-font
 
 block sectionContent
 	div.login
