--- a/src/styles/comps/section.sass
+++ b/src/styles/comps/section.sass
@@ -1,9 +1,13 @@
 .section
 	width: 95%
+	max-width: 600px
 	margin: 0 auto
 	background-color: #fff
 	margin-top: 10px
-	padding: 20px 10px
+
+	&-in
+		width: 100%
+		padding: 20px 10px
 
 	&-heading
 		position: relative
@@ -21,10 +25,11 @@
 			+absolute(auto 0px (-$halfRatio) auto)
 			+flex(center, center)
 			border: 3px solid $c-text-light
-			background-color: $c-text-light
 			border-radius: $halfRatio
 			z-index: 10
 			overflow: hidden
+			&.view-grey
+				background-color: $c-text-light
 
 			&-img
 				+sizes(100%, 100%)
@@ -36,6 +41,8 @@
 			&-font
 				font-size: 114px
 				color: #fff
+				&.view-smaller
+					font-size: 70px
 
 	&-return
 		color: black
@@ -57,17 +64,19 @@
 			transition: 200ms
 
 	&-text
-		font-size: 13px
+		font-size: 15px
 		margin-top: 30px
 
 	&-trio
+		width: 100%
 		&-links
 			+flex(flex-start, center)
 			&-item
 				display: block
-				padding: 10px 30px
+				padding: 10px 18px
 				color: black
 				transition: 200ms
+				font-size: 14px
 				&:not(.active-item):hover
 					opacity: .7
 				&.active-item
