--- a/src/templates/profile.pug
+++ b/src/templates/profile.pug
@@ -50,7 +50,7 @@ block otherContent
                 p.profile-option-info-text Videa, které máte v oblíbených
         i(aria-hidden="true").fa.fa-arrow-circle-right.profile-option-next
 
-    a(href="#").profile-option
+    a(href="/reactions.html").profile-option
         .profile-option-wrap
             .profile-option-img.view-reactions
                 i(aria-hidden="true").fa.fa-comment
