--- a/src/styles/parts/login.sass
+++ b/src/styles/parts/login.sass
@@ -13,7 +13,7 @@
 			&-icon
 				+sizes(50px, 100%)
 				+flex(center, center)
-				border-right: 1px solid rgba(#FFF, .4)
+				border-right: 1px solid rgba(#fff, .4)
 				font-size: 22px
 			&-text
 				flex-grow: 1
@@ -55,7 +55,7 @@
 			&-in
 				+sizes(100%, 45px)
 				max-width: 500px
-				border: 1px solid #OOO
+				border: 1px solid #f1f1f1
 				font-size: 16px
 				padding-left: 32px
 
