--- a/src/styles/parts/movieholiday.sass
+++ b/src/styles/parts/movieholiday.sass
@@ -1,6 +1,8 @@
 .movieholiday
+    background-color: #fff
     &-wrapper
         padding-bottom: 20px
+        background-color: #fff
         &-in
             +flex(center, center)
             padding: 20px 0
