--- a/src/styles/parts/profile.sass
+++ b/src/styles/parts/profile.sass
@@ -26,6 +26,7 @@
     +flex(space-between, center)
     color: $c-text
     width: 95%
+    max-width: 600px
     margin: 15px auto
     background: #fff
     padding: 10px
