--- a/src/styles/parts/footer.sass
+++ b/src/styles/parts/footer.sass
@@ -1,13 +1,13 @@
 .footer
-  +relative(null null 0 null)
-  +size(100% auto)
+  +absolute(null null 0 null)
+  +size(100% 90px)
   background-color: rgb(72, 72, 72)
   padding: 35px 0
   margin-top: 100px
 
   &-in
     +flex(space-between, center)
-    +size(95% auto)
+    +size(95% 100%)
     margin: 0 auto
 
   &-items
