--- a/src/styles/comps/section.sass
+++ b/src/styles/comps/section.sass
@@ -12,11 +12,19 @@
 	&-heading
 		position: relative
 		border-bottom: 2px dashed $c-text-light
-		padding-bottom: 20px
+		padding-bottom: 5px
+		margin-top: -10px
+
 		&-title
 			color: $c-text
 			font-size: 25px
 			margin: 0
+			margin-bottom: 3px
+
+		&-path
+			margin: 0
+			max-width: 65%
+			font-size: 13px
 
 		&-picture
 			$ratio: 120px
