--- a/src/templates/components/footer.pug
+++ b/src/templates/components/footer.pug
@@ -1,7 +1,7 @@
 footer.footer
     .footer-in
         a(href="").footer-logo
-            img(src="").footer-logo-img
+            img(src="images/logo-tripood-footer.png").footer-logo-img
         .footer-items
             a(href="").footer-items-item Home
             a(href="").footer-items-item O službě
