--- a/src/templates/layouts/section.pug
+++ b/src/templates/layouts/section.pug
@@ -5,6 +5,7 @@ block content
 		.section-in
 			.section-heading
 				h1.section-heading-title= sectionTitle
+				p.section-heading-path Home > John Simones > Název něčeho čehosi...
 
 				block sectionPicture
 
