--- a/src/templates/movieholiday.pug
+++ b/src/templates/movieholiday.pug
@@ -13,7 +13,7 @@ block sectionPicture
 block sectionOuterContent
     .movieholiday-wrapper
         .movieholiday-wrapper-in
-            a(href="#").movieholiday-button
+            a(href="/video-step1.html").movieholiday-button
                 p.movieholiday-button-text Create
                 .movieholiday-button-plus
                     i(aria-hidden="true").fa.fa-plus
