--- a/src/styles/parts/footer.sass
+++ b/src/styles/parts/footer.sass
@@ -12,12 +12,23 @@
 
   &-items
     +flex()
+    padding-left: 10px
+    flex-wrap: wrap
 
     &-item
       font-size: 14px
       color: #fff
-      margin-left: 30px
-      transition: 200ms
+      transition: opacity 200ms
+      width: 50%
 
       &:hover
         opacity: 0.7
+
+  +media(600)
+    &-items
+      padding: 0
+      flex-wrap: nowrap
+
+      &-item
+        width: auto
+        margin-left: 30px
