--- a/src/styles/comps/section.sass
+++ b/src/styles/comps/section.sass
@@ -13,18 +13,18 @@
 		position: relative
 		border-bottom: 2px dashed $c-text-light
 		padding-bottom: 5px
-		margin-top: -10px
+		margin-top: -5px
 
 		&-title
 			color: $c-text
 			font-size: 25px
 			margin: 0
-			margin-bottom: 3px
 
 		&-path
-			margin: 0
+			margin: 5px 0
 			max-width: 65%
 			font-size: 13px
+			line-height: 13px
 
 		&-picture
 			$ratio: 120px
