--- a/src/templates/layouts/default.pug
+++ b/src/templates/layouts/default.pug
@@ -22,6 +22,7 @@ html(lang=manifest.lang)
 
 		script(src="https://use.fontawesome.com/54134a682d.js")
 
+		link(rel='stylesheet', href=`static/jquery-ui.min.css`, media='print')
 		link(rel='stylesheet', href=`styles/${buildstamp}index.css`, media='screen')
 		link(rel='stylesheet', href=`styles/${buildstamp}print.css`, media='print')
 
