--- a/src/templates/layouts/section.pug
+++ b/src/templates/layouts/section.pug
@@ -5,7 +5,15 @@ block content
 		.section-in
 			.section-heading
 				h1.section-heading-title= sectionTitle
-				p.section-heading-path Home > John Simones > Název něčeho čehosi...
+				p.section-heading-path Home >
+					|
+					|
+					a(href="#") John Simones
+					|
+					| >
+					|
+					|
+					a(href="#")  Název něčeho čehosi...
 
 				block sectionPicture
 
