--- a/src/templates/movieholiday.pug
+++ b/src/templates/movieholiday.pug
@@ -23,7 +23,7 @@ block afterTrioContent
     .movieholiday
         .video
             video(controls).video-src
-                source(src="https://fpdl.vimeocdn.com/vimeo-prod-skyfire-std-us/01/576/8/202884524/687898845.mp4?token=1509221476-0xb9a1af6c5db68fad2b64ebf48ec5cff951b8f994" type="video/mp4")
+                source(src="static/The_Rooster.mp4" type="video/mp4")
             p.video-text NEW YEAR: New York, USA to Stockholm, Sweden for only $273 roudtrip
 
         p.movieholiday-private
