--- a/src/styles/parts/option.sass
+++ b/src/styles/parts/option.sass
@@ -1,11 +1,11 @@
 .option
-  +relative()
 
   &-item
+    +relative()
     &:nth-child(1n + 2)
       margin-top: 15px
     &-in
-      +flex(flex-start, center)
+      +flex(flex-start)
 
   &-icon
     +flex(center, center)
@@ -23,11 +23,16 @@
       border: 2px solid #f1f1f1
       padding: 0 100px 0 10px
 
+      &.view-area
+        +size(100% 150px)
+        padding-top: 10px
+
   &-text
     margin: 0
     padding-left: 15px
     padding-right: 50px
     color: $c-main
+    align-self: center
 
   &-tools
     +flex()
@@ -60,7 +65,6 @@
     &-map
       +flex(center, center)
       +size(100% 150px)
-      border: 2px solid #f1f1f1
       overflow: hidden
 
       &-img
@@ -77,7 +81,7 @@
   &-paths
     max-width: 350px
     margin: -5px
-    margin-top: 10px
+    margin-top: 0px
 
     &-in
       +flex(center)
@@ -99,6 +103,91 @@
       &.active
         color: black
         border: 3px solid $c-main
+
+  &-stars
+    +flex(center, center)
+
+    &-fieldset
+      padding: 0 0 0 20px
+      border: none
+
+    &-input
+      display: none
+
+      &:checked ~ label
+        color: $c-main
+
+    &-label
+      padding: 5px
+      font-size: 22px
+      +relative()
+      color: #dad9d8
+      float: right
+
+      &:hover,
+      &:hover ~ &
+        color: #4186ce
+
+  &-money
+    +flex(flex-start, center)
+    +size(calc(100% - 150px) auto)
+    &-wrap
+      +flex(center, center)
+      width: 50%
+
+    &-input
+      +size(100% 50px)
+      flex-grow: 1
+      border: 1px solid #f1f1f1
+
+    &-label
+      margin: 0
+      padding: 0 10px
+
+  &-currency
+    +flex(flex-end, center)
+    +size(100% auto)
+    margin-top: 10px
+
+    &-text
+      padding: 0 20px
+
+    &-select
+      +size(60% 50px)
+      border: 1px solid #f1f1f1
+      background: none
+      box-shadow: none
+
+  &-add
+    &-wrap
+      +size(100% auto)
+      +flex(flex-start, center)
+      +relative()
+
+    &-icon
+      +flex(center, center)
+      +size(50px 50px)
+      background: #4aa33f
+      color: white
+      font-size: 22px
+
+      i
+        margin-top: -5px
+
+    &-plus
+      +flex(center, center)
+      +absolute(50% 25px null null)
+      transform: translateY(-50%)
+      color: #4aa33f
+      font-size: 25px
+      z-index: 1
+
+    &-select
+      +size(100% 50px)
+      +relative()
+      z-index: 2
+      background: none
+      border: 1px solid #f1f1f1
 
   +media(500)
     &-paths
